--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "express": "^5.1.0",
+    "multer": "^2.0.2",
     "scribe.js-ocr": "^0.8.0"
   }
 }
